# triggercmd-python-agent

./: .gitignore  README.md  pyproject.toml  test.py  update.md
src/triggercmd/: __init__.py  agent.py  client.py  exceptions.py  ha.py  sails_websocket.py  utils.py
src/triggercmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: async-connection-test.py  async-trigger-test.py  classes.py  list-test.py  trigger-test.py  user_id-test.py
